--- a/_pages/404.html
+++ b/_pages/404.html
@@ -4,6 +4,6 @@ title: "404: Page not found"
 permalink: 404.html
 ---
 
-<div>Sorry, we've misplaced that URL or it's pointing to something that doesn't exist.
-<a href="{{ site.baseurl }}/">Head back home</a> to try finding it again.
+<div>Sorry, that URL's been lost in the archive or it's pointing to something that's too water damaged to read.
+<a href="{{ site.baseurl }}/">Head back home</a> to try again.
 </div>
