--- a/_texts/doc1.html
+++ b/_texts/doc1.html
@@ -8,6 +8,12 @@
       <h2>Image Gallery</h2> 
       <p>Select a thumbnail below to view the image</p> 
     </div> 
+      
+<img id="current-image" src="images/image1.jpg" alt="Image 1">
+
+<div id="image-gallery">
+
+</div>
   </body>
 </html>
  
