--- a/_texts/doc1.html
+++ b/_texts/doc1.html
@@ -7,12 +7,10 @@
     <div class="intro"> 
       <h2>Image Gallery</h2> 
       <p>Select a thumbnail below to view the image</p> 
-    </div> 
-      
-<img id="current-image" src="images/image1.jpg" alt="Image 1">
-
+    </div>
 <div id="image-gallery">
-
+ <img id="current-image" src="images/image1.jpg" alt="Image 1">
+<link rel="stylesheet" type="text/css" href="styles.css">
 </div>
   </body>
 </html>
