--- a/_texts/doc1.html
+++ b/_texts/doc1.html
@@ -9,7 +9,7 @@
       <p>Select a thumbnail below to view the image</p> 
     </div>
 <div id="image-gallery">
- <img id="current-image" src="images/image1.jpg" alt="Image 1">
+ <img id="current-image" src="images/grodzki1.jpg" alt="Image 1">
 <link rel="stylesheet" type="text/css" href="styles.css">
 </div>
   </body>
